--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node node_modules/.bin/mocha --watch --recursive **/*.spec.js"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,6 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-spies": "^0.7.1",
-    "mocha": "^3.2.0"
+    "jest": "^19.0.2"
   }
 }
